--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             object-fit: cover;
             width: 100%;
             height: auto;
-            max-height: 288px; /* Matches h-72 */
+            max-height: 200px; /* Reduced for mobile two-column layout */
         }
 
         /* Parallax floating elements */
@@ -159,69 +159,69 @@
                 <h2 class="text-2xl sm:text-3xl md:text-5xl font-['Playfair_Display'] font-bold text-center mb-8 sm:mb-16 text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">
                     A Collection of Joyful Moments
                 </h2>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-8">
+                <div class="grid grid-cols-2 sm:grid-cols-2 lg:grid-cols-3 gap-2 sm:gap-8">
                     <!-- Photo Card 1 -->
                     <div class="photo-card" data-aos="fade-up" style="--mouse-x: 0px; --mouse-y: 0px;">
                         <img src="https://raw.githubusercontent.com/A9Pro/Happy-Birthday/main/idore.jpg" onerror="this.src='https://picsum.photos/600/400?random=1'" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
-                        <div class="p-4 sm:p-6">
-                            <h3 class="text-lg sm:text-xl font-bold mb-2">Summer Adventures</h3>
-                            <p class="text-gray-400 text-sm sm:text-base">Laughs and sunshine on a perfect day.</p>
+                        <div class="p-3 sm:p-6">
+                            <h3 class="text-sm sm:text-xl font-bold mb-2">Summer Adventures</h3>
+                            <p class="text-gray-400 text-xs sm:text-base">Laughs and sunshine on a perfect day.</p>
                         </div>
                     </div>
                     <!-- Photo Card 2 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="200" style="--mouse-x: 0px; --mouse-y: 0px;">
                         <img src="https://raw.githubusercontent.com/A9Pro/Happy-Birthday/main/idore1.jpg" onerror="this.src='https://picsum.photos/600/400?random=2'" alt="Another cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
-                        <div class="p-4 sm:p-6">
-                            <h3 class="text-lg sm:text-xl font-bold mb-2">Winter Wonderland</h3>
-                            <p class="text-gray-400 text-sm sm:text-base">Warm smiles on a cool, crisp evening.</p>
+                        <div class="p-3 sm:p-6">
+                            <h3 class="text-sm sm:text-xl font-bold mb-2">Winter Wonderland</h3>
+                            <p class="text-gray-400 text-xs sm:text-base">Warm smiles on a cool, crisp evening.</p>
                         </div>
                     </div>
                     <!-- Photo Card 3 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="400" style="--mouse-x: 0px; --mouse-y: 0px;">
                         <img src="https://raw.githubusercontent.com/A9Pro/Happy-Birthday/main/idore2.jpg" onerror="this.src='https://picsum.photos/600/400?random=3'" alt="A special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
-                        <div class="p-4 sm:p-6">
-                            <h3 class="text-lg sm:text-xl font-bold mb-2">Happy Moments</h3>
-                            <p class="text-gray-400 text-sm sm:text-base">Celebrating milestones and making new memories.</p>
+                        <div class="p-3 sm:p-6">
+                            <h3 class="text-sm sm:text-xl font-bold mb-2">Happy Moments</h3>
+                            <p class="text-gray-400 text-xs sm:text-base">Celebrating milestones and making new memories.</p>
                         </div>
                     </div>
                     <!-- Photo Card 4 -->
                     <div class="photo-card" data-aos="fade-up" style="--mouse-x: 0px; --mouse-y: 0px;">
                         <img src="https://raw.githubusercontent.com/A9Pro/Happy-Birthday/main/idore3.jpg" onerror="this.src='https://picsum.photos/600/400?random=4'" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
-                        <div class="p-4 sm:p-6">
-                            <h3 class="text-lg sm:text-xl font-bold mb-2">Summer Adventures</h3>
-                            <p class="text-gray-400 text-sm sm:text-base">Laughs and sunshine on a perfect day.</p>
+                        <div class="p-3 sm:p-6">
+                            <h3 class="text-sm sm:text-xl font-bold mb-2">Summer Adventures</h3>
+                            <p class="text-gray-400 text-xs sm:text-base">Laughs and sunshine on a perfect day.</p>
                         </div>
                     </div>
                     <!-- Photo Card 5 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="200" style="--mouse-x: 0px; --mouse-y: 0px;">
                         <img src="https://raw.githubusercontent.com/A9Pro/Happy-Birthday/main/idore4.jpg" onerror="this.src='https://picsum.photos/600/400?random=5'" alt="Another cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
-                        <div class="p-4 sm:p-6">
-                            <h3 class="text-lg sm:text-xl font-bold mb-2">Winter Wonderland</h3>
-                            <p class="text-gray-400 text-sm sm:text-base">Warm smiles on a cool, crisp evening.</p>
+                        <div class="p-3 sm:p-6">
+                            <h3 class="text-sm sm:text-xl font-bold mb-2">Winter Wonderland</h3>
+                            <p class="text-gray-400 text-xs sm:text-base">Warm smiles on a cool, crisp evening.</p>
                         </div>
                     </div>
                     <!-- Photo Card 6 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="400" style="--mouse-x: 0px; --mouse-y: 0px;">
                         <img src="https://raw.githubusercontent.com/A9Pro/Happy-Birthday/main/idore5.jpg" onerror="this.src='https://picsum.photos/600/400?random=6'" alt="A special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
-                        <div class="p-4 sm:p-6">
-                            <h3 class="text-lg sm:text-xl font-bold mb-2">Happy Moments</h3>
-                            <p class="text-gray-400 text-sm sm:text-base">Celebrating milestones and making new memories.</p>
+                        <div class="p-3 sm:p-6">
+                            <h3 class="text-sm sm:text-xl font-bold mb-2">Happy Moments</h3>
+                            <p class="text-gray-400 text-xs sm:text-base">Celebrating milestones and making new memories.</p>
                         </div>
                     </div>
                     <!-- Photo Card 7 -->
                     <div class="photo-card" data-aos="fade-up" style="--mouse-x: 0px; --mouse-y: 0px;">
                         <img src="https://raw.githubusercontent.com/A9Pro/Happy-Birthday/main/idore6.jpg" onerror="this.src='https://picsum.photos/600/400?random=7'" alt="A cherished memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
-                        <div class="p-4 sm:p-6">
-                            <h3 class="text-lg sm:text-xl font-bold mb-2">Special Memories</h3>
-                            <p class="text-gray-400 text-sm sm:text-base">More beautiful moments to cherish.</p>
+                        <div class="p-3 sm:p-6">
+                            <h3 class="text-sm sm:text-xl font-bold mb-2">Special Memories</h3>
+                            <p class="text-gray-400 text-xs sm:text-base">More beautiful moments to cherish.</p>
                         </div>
                     </div>
                     <!-- Photo Card 8 -->
                     <div class="photo-card" data-aos="fade-up" data-aos-delay="200" style="--mouse-x: 0px; --mouse-y: 0px;">
                         <img src="https://raw.githubusercontent.com/A9Pro/Happy-Birthday/main/idore7.jpg" onerror="this.src='https://picsum.photos/600/400?random=8'" alt="Another special memory" class="w-full h-72 object-cover rounded-2xl mb-4 shadow-xl">
-                        <div class="p-4 sm:p-6">
-                            <h3 class="text-lg sm:text-xl font-bold mb-2">New Adventures</h3>
-                            <p class="text-gray-400 text-sm sm:text-base">Looking forward to what's to come.</p>
+                        <div class="p-3 sm:p-6">
+                            <h3 class="text-sm sm:text-xl font-bold mb-2">New Adventures</h3>
+                            <p class="text-gray-400 text-xs sm:text-base">Looking forward to what's to come.</p>
                         </div>
                     </div>
                 </div>
